--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
-
+/target/
 # Folder config file
 Desktop.ini
 
@@ -45,4 +45,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-target/
+
